@@ -1,36 +1,39 @@
 package com.example.demo1.layout;
 
-import com.example.demo1.Logica.ThemaLogica;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
+import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.layout.Pane;
+import javafx.scene.paint.Color;
+import javafx.scene.text.Font;
+import javafx.scene.text.FontWeight;
+import javafx.scene.text.Text;
 import javafx.stage.Stage;
-
-import java.util.Arrays;
 import java.util.List;
 
-import static com.example.demo1.Logica.MenuLogica.openMenu;
-import static com.example.demo1.Logica.TaalLogica.openTaal;
+import static com.example.demo1.Logica.InstellingenLogica.openInstellingen;
 import static com.example.demo1.Logica.ThemaLogica.openThema;
 
-public class InstellingenLayout extends Layout{
-    public void instellingenLayout(Pane root, Stage stage){
-        List<String> buttonKeys = Arrays.asList("thema", "taal");
+
+public class TaalLayout extends Layout{
+    public void taalLayout(Pane root, Stage stage){
+        layoutCirkel(root);
+        List<String> buttonKeys = List.of("thema");
         maakButton(root, buttonKeys, stage);
         terugKnop(root, stage);
     }
-
     @Override
     protected void setMethode(Button button, Stage stage, String buttonKey) {
-        switch (buttonKey) {
-            case "thema" -> button.setOnAction(e -> openThema(stage));
-            case "taal" -> button.setOnAction(e -> openTaal(stage));
+        if (buttonKey.equals("thema")) {
+            button.setOnAction(e -> openThema(stage));
         }
+
     }
+
     @Override
     protected EventHandler<ActionEvent> setMethodeTerugKnop(Stage stage) {
-        return (e -> openMenu(stage));
+        return (actionEvent -> openInstellingen(stage));
     }
 
     @Override
@@ -42,4 +45,5 @@ public class InstellingenLayout extends Layout{
     protected int setLayoutY(int buttonIndex) {
         return 110;
     }
+
 }
